# VerifNews1

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01b1555ca7c2_add_difficulty_to_quiz_questions.py  15fe7d803359_add_quiz_tables.py  20311673ece1_initial_schema.py  a3c7e8d91f00_quiz_rotation_and_monthly.py  b4d2f1a83e00_add_fun_fact_and_15_questions.py  c5e9f2b47a10_add_push_token_to_users.py  d7a3e4c19f52_add_token_blacklist.py  e8b4f5d72a31_add_notification_prefs_to_users.py  f1a2b3c4d5e6_add_performance_indexes.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  article.py  audio_cache.py  bookmark.py  category.py  quiz.py  reaction.py  source.py  token_blacklist.py  user.py  user_preference.py  verification.py
backend/app/pipeline/: cross_verifier.py  deduplicator.py  ingestion.py  nlp_processor.py  parser.py  scheduler.py  sources_config.py
backend/app/schemas/: article.py  auth.py  category.py  quiz.py  source.py  user.py  verification.py
backend/app/services/: auth_service.py  email_service.py  embedding_service.py  feed_service.py  notification_service.py  quiz_service.py  tts_service.py  verification_service.py
backend/scripts/: create_cosine_func.sql  fix_sources.sql  regenerate_summaries.py  run_pipeline.py  seed_categories.py  seed_sources.py  setup_db.sql  test_api.py  verify_seed.sql
backend/tests/: test_auth.py  test_pipeline.py  test_vector_ops.py
frontend/: app.json  (+5 more)
(+107 files in other folders)
